--- a/index.html
+++ b/index.html
@@ -15,16 +15,55 @@
     />
 
     <!--Font Awesome-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
-      integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7"
+    <script
+      src="https://kit.fontawesome.com/ccde67fc05.js"
       crossorigin="anonymous"
-    />
+    ></script>
 
     <title>News</title>
   </head>
   <body>
+    <header>
+      <div class="nav-container">
+        <div class="top-head">
+          <div class="web-name">
+            <h1>NEWS.ME</h1>
+          </div>
+
+          <div class="ham-btn">
+            <span>
+              <i class="fas fa-bars"></i>
+            </span>
+          </div>
+
+          <div class="times-btn">
+            <span>
+              <i class="fas fa-times"></i>
+            </span>
+          </div>
+        </div>
+        <div class="nav-bar" id="nav-bar" aria-expanded="false">
+          <nav>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Current Affairs</a></li>
+              <li><a href="#">Archive</a></li>
+              <li><a href="#">Featured</a></li>
+              <li><a href="#">Broadcast</a></li>
+              <li><a href="#">Category</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="social-icons">
+          <ul>
+            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li<a href="#">><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
     <script src="./script.js"></script>
   </body>
 </html>
