nav completed started implementing banner

--- a/index.html
+++ b/index.html
@@ -56,14 +56,51 @@
         </div>
         <div class="social-icons">
           <ul>
-            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-            <li<a href="#">><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            <li>
+              <a href="#"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+            </li>
           </ul>
         </div>
       </div>
     </header>
+
+    <!--END OF HEADER-->
+    <!--BANNER-->
+    <section class="banner">
+      <div class="banner-main-content">
+        <h2>GET THE WORLD´S LATEST NEWS</h2>
+        <h3>World Leading News Portal</h3>
+        <button><a href="#">Know More</a></button>
+
+        <div class="current-news-head">
+          <h3>
+            Something something: How is this goingo to change your life in 150
+            years?<span>by Carmen SanDiego</span>
+          </h3>
+          <h3>
+            Another something: How is this goingo to change your life in 150
+            years?<span>by Pedro Jameson</span>
+          </h3>
+          <h3>
+            Something something: Hos is this goingo to change your life in 150
+            years?<span>by James Walker</span>
+          </h3>
+          <h3>
+            Something something: Hos is this goingo to change your life in 150
+            years?<span>by Heiz BudWeisser </span>
+          </h3>
+        </div>
+      </div>
+    </section>
     <script src="./script.js"></script>
   </body>
 </html>
