banner section added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>News</title>
+    <title>>>>>>News<<<<<</title>
   </head>
   <body>
     <header>
@@ -83,24 +83,95 @@
 
         <div class="current-news-head">
           <h3>
-            Something something: How is this goingo to change your life in 150
-            years?<span>by Carmen SanDiego</span>
+            Something something: How is this going to change your life in 150
+            years?<span> by Carmen SanDiego</span>
           </h3>
           <h3>
-            Another something: How is this goingo to change your life in 150
-            years?<span>by Pedro Jameson</span>
+            Another something: You won´t believe someone actually did this<span></span>
+              by Pedro Jameson</span
+            >
+          </h3>
+          <h3>
+            What adoes Bitcoin, a bottle of water and my grandpa old socks have
+            in common?<span> by James Walker</span>
           </h3>
           <h3>
             Something something: Hos is this goingo to change your life in 150
-            years?<span>by James Walker</span>
-          </h3>
-          <h3>
-            Something something: Hos is this goingo to change your life in 150
-            years?<span>by Heiz BudWeisser </span>
+            years?<span> by Heinz BudWeisser </span>
           </h3>
         </div>
       </div>
+
+      <div class="banner-sub-content">
+        <div class="hot-topic">
+          <img src="./imgs/img_banner1.jpg" alt="" />
+          <div class="hot-topic-content">
+          <h2>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste alias
+            eaque eos.
+          </h2>
+
+          <h3>New Topic</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+            repellendus sunt perferendis earum non sed.
+          </p>
+          <a href="#">Read More</a>
+          </div>
+        </div>
+        <div class="hot-topic">
+          <img src="./imgs/img_banner2.jpg" alt="" />
+          <div class="hot-topic-content">
+          <h2>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste alias
+            eaque eos.
+          </h2>
+
+          <h3>New Topic</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+            repellendus sunt perferendis earum non sed.
+          </p>
+          <a href="#">Read More</a>
+          </div>
+        </div>
+        <div class="hot-topic">
+          <img src="./imgs/img_banner3.jpg" alt="" />
+          <div class="hot-topic-content">
+          <h2>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste alias
+            eaque eos.
+          </h2>
+
+          <h3>New Topic</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+            repellendus sunt perferendis earum non sed.
+          </p>
+          <a href="#">Read More</a>
+          </div>
+        </div>
+        <div class="hot-topic">
+          <img src="./imgs/img_banner4.jpg" alt="" />
+          <div class="hot-topic-content">
+          <h2>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste alias
+            eaque eos.
+          </h2>
+
+          <h3>New Topic</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+            repellendus sunt perferendis earum non sed.
+          </p>
+          <a href="#">Read More</a>
+          </div>
+        </div>
+      </div>
     </section>
+
+    <hr />
+
     <script src="./script.js"></script>
   </body>
 </html>
